2002-10-02  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule/mule-coding.el (coded-charset-entity-reference-alist): Add
	setting for JIS X 0213.

2002-07-23  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/japanese.el (euc-jisx0213): New coding-system.

	* mule/mule-conf.el (japanese-jisx0213-1): Specify
	`japanese-jisx0208-1990' as the mother.

2002-07-18  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* dumped-lisp.el (preloaded-file-list): Add "u0A490-Yi-Radicals"
	in UTF-2000.

2002-07-05  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule/mule-coding.el (utf-8-er): New coding-system in UTF-2000;
	setup `coded-charset-entity-reference-alist'.

2002-04-12  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-charset.el (default-coded-charset-priority-list): Add
	`chinese-big5-eten-a' and `chinese-big5-eten-b'.

2002-04-11  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule/mule-conf.el (chinese-big5-pua): New coded-charset.
	(chinese-big5-eten-a): Likewise.
	(chinese-big5-eten-b): Likewise.
	(chinese-big5-cdp): Declare as a subset of `chinese-big5' whose
	code range is #x8140 .. #x8DFE.

2002-04-08  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-conf.el (chinese-big5-eten): New coded-charset in
	UTF-2000.
	(chinese-big5-cdp): Likewise.

2001-12-31  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-charset.el (default-coded-charset-priority-list):
	Delete `mojikyo-2022-1'.

2001-12-26  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-charset.el (default-coded-charset-priority-list):
	Delete `mojikyo'.

2001-12-11  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule/mule-charset.el (default-coded-charset-priority-list): Add
	`ucs-sip'.

2001-11-14  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule/mule-charset.el (default-coded-charset-priority-list):
	Comment out `chinese-gb12345'.

2001-11-13  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>
